test/spec_vectors/block/fail/module_12.wat
(module (type $sig (func)) (func (block (type $sig) (i32.const 0))))